[package]
name = "rat"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12"
image = { version = "0.23", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
imageproc = "0.20"
stdweb = "0.4"
svg = "0.7"
yew = { version = "0.14", features = ["std_web"] }

[dependencies.zip]
version = "0.5"
default-features = false

[profile.release]
lto = true
opt-level = 's'
