[package]
name = "rat"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.23", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
imageproc = "0.20"
js-sys = "0.3"
svg = "0.8"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["File", "Performance", "Window"] }
yew = "0.16"

[dependencies.zip]
version = "0.5"
default-features = false

[profile.dev]
opt-level = 1

[profile.dev.package.image]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
codegen-units = 1

[lib]
crate-type = ["cdylib"]
